fixed whitespace and newlines on plaintext output

--- a/src-frontend/src/app/card/card.component.css
+++ b/src-frontend/src/app/card/card.component.css
@@ -71,7 +71,7 @@ pre {
 .output-plain {
   word-wrap: break-word;
   overflow: hidden;
-  white-space: normal;
+  white-space: pre-line;
 }
 .output-error {
   font-family: Menlo, Monaco, "Courier New", monospace;
